RESOLVED FIXED264315
REGRESSION (270277@main): [iOS] imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-block-size.optional.html is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=264315
Summary REGRESSION (270277@main): [iOS] imported/w3c/web-platform-tests/css/css-writi...
Aditya Keerthi
Reported 2023-11-06 21:05:15 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-06 21:05:29 PST
Aditya Keerthi
Comment 2 2023-11-06 21:15:14 PST
EWS
Comment 3 2023-11-07 08:33:34 PST
Committed 270322@main (5158c32444fd): <https://commits.webkit.org/270322@main> Reviewed commits have been landed. Closing PR #20083 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.