REGRESSION (270277@main): [iOS] imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-block-size.optional.html is a constant failure https://bugs.webkit.org/show_bug.cgi?id=264315 rdar://118035123

Reviewed by Megan Gardner.

imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-block-size.optional.html
tests that the block-size of inputs are equal in vertical and horizontal
writing modes.

270277@main modified the user agent stylesheet to use logical properties to
better support vertical form controls. However,
`RenderTextControl::computeLogicalHeight` is still incorrectly using physical
values for padding, border, and margin. The mix of logical height with physical
padding/border/margin results in an inconsistent block-size depending on the
writing mode.

Fix by using logical properties in `RenderTextControl::computeLogicalHeight`.

* Source/WebCore/rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computeLogicalHeight const):

Canonical link: https://commits.webkit.org/270322@main